fix: prevent layout shift from scrollbar gutter without affecting mobile

--- a/src/routes/styles/foundation/_base.scss
+++ b/src/routes/styles/foundation/_base.scss
@@ -17,7 +17,6 @@ html {
   font-weight: 400;
   font-variation-settings: 'wght' 400;
   color-scheme: light dark;
-  scrollbar-gutter: stable both-edges;
   text-autospace: normal;
   font-size: 93.75%;
 
@@ -35,6 +34,10 @@ body {
   color: var(--c-primary);
   font-feature-settings: 'case';
   background: var(--c-bg-primary);
+
+  @media screen and (min-width: 40rem) {
+    padding-inline-start: calc(100dvi - 100%);
+  }
 }
 
 strong {
